Pourcentages des valeurs manquantes dans Visualisation.ipynb et début traitement des valeurs manquantes des Working Hours (interpolation pour les données manquantes entourées de valeurs non manquantes)

--- a/Visualisation.ipynb
+++ b/Visualisation.ipynb
@@ -132,6 +132,41 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Pourcentage de données manquantes par variable\n",
+    "percentage_missing=((df_missing_binary.sum())/df_missing_binary.shape[0])*100\n",
+    "\n",
+    "#On ne garde que les colonnes ayant des missing values\n",
+    "percentage_missing=percentage_missing[percentage_missing>0]\n",
+    "percentage_missing = percentage_missing.sort_values(ascending=False)\n",
+    "\n",
+    "'''\n",
+    "Nous avons un problème avec l'Estonie, 85% des données pour les taux d'intérêt sont des valeurs manquantes\n",
+    "J'ai revérifié sur le site de l'OCDE et c'est un problème qui vient de leur bases de données. Comme c'est une \n",
+    "un pourcentage considérable, on devrait peut-être retirer l'Estonie de notre analyse\n",
+    "\n",
+    "Pour les données qui sont \"entrecoupées\" (on dirait un chemin de la route)--> c'est les Working Hours. On peut appliquer le même \n",
+    "interpolation qu'on a faite pour construire le df. \n",
+    "\n",
+    "--> Voir tentative d'interpolation dans le notebook data.ipynb\n",
+    "Un problème persiste avec les données qui sont au début ou à la fin de la période temporelle, il faudra envisager\n",
+    "une autre méthode\n",
+    "'''\n",
+    "percentage_missing\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -160,7 +195,7 @@
    "source": [
     "plt.figure(figsize=(14, 6))  # Taille du graphique\n",
     "\n",
-    "plt.plot(df.index, df_plot['PIB_France'], marker='o', linestyle='-')\n",
+    "plt.plot(df.index, df['PIB_France'], marker='o', linestyle='-')\n",
     "\n",
     "plt.xlabel(\"Période\")\n",
     "plt.ylabel(\"PIB de la France\")\n",
@@ -168,7 +203,7 @@
     "\n",
     "# Sélectionner un sous-ensemble des labels de l'axe X pour éviter la surcharge\n",
     "num_ticks = 8  # Nombre de labels affichés sur l'axe X\n",
-    "indices = np.linspace(0, len(df_plot.index) - 1, num_ticks, dtype=int)  # Espacement des indices\n",
+    "indices = np.linspace(0, len(df.index) - 1, num_ticks, dtype=int)  # Espacement des indices\n",
     "plt.xticks(df.index[indices], rotation=45)  # Appliquer les labels espacés\n",
     "plt.grid(True)\n",
     "plt.show()"
@@ -253,7 +288,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
