Fin interpolation des données intermédiaires (ST_IR).

--- a/Visualisation.ipynb
+++ b/Visualisation.ipynb
@@ -66,6 +66,10 @@
     "# Importation des données\n",
     "df = pd.read_excel(\"Données_produites/base_de_données_v1.xlsx\")\n",
     "\n",
+    "#Pour voir les changements avec la suppression des données manquantes intermédiaires utiliser:\n",
+    "# df = pd.read_excel(\"base_de_données_v1.xlsx\")\n",
+    "\n",
+    "\n",
     "# Indexation\n",
     "df = df.set_index('Unnamed: 0')"
    ]
