--- a/data.ipynb
+++ b/data.ipynb
@@ -305,7 +305,10 @@
     "df_ST_IR = df_ST_IR_selected.pivot_table(index='TIME_PERIOD', columns='Reference area', values='OBS_VALUE')\n",
     "df_ST_IR.columns = [f'ST_IR_{col}' for col in df_ST_IR.columns]\n",
     "df_ST_IR.columns = [col.replace(\" \", \"_\") for col in df_ST_IR.columns]\n",
-    "df_ST_IR = df_ST_IR.rename(columns={'ST_IR_Slovak_Republic': 'ST_IR_Slovakia'})"
+    "df_ST_IR = df_ST_IR.rename(columns={'ST_IR_Slovak_Republic': 'ST_IR_Slovakia'})\n",
+    "\n",
+    "#Nettoyage des données manquantes intermédiaires avec une interpolation\n",
+    "df_ST_IR['ST_IR_Hungary']=df_ST_IR['ST_IR_Hungary'].interpolate(method='linear')\n"
    ]
   },
   {
