j'avais oublié ede commit: essai modèle avec 2 lags

--- a/modèle US.ipynb
+++ b/modèle US.ipynb
@@ -614,7 +614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -627,7 +627,7 @@
       "Model:                            OLS   Adj. R-squared:                  0.982\n",
       "Method:                 Least Squares   F-statistic:                     280.2\n",
       "Date:                Tue, 25 Mar 2025   Prob (F-statistic):           1.58e-65\n",
-      "Time:                        10:53:01   Log-Likelihood:                 1.2524\n",
+      "Time:                        11:24:06   Log-Likelihood:                 1.2524\n",
       "No. Observations:                 101   AIC:                             39.50\n",
       "Df Residuals:                      80   BIC:                             94.41\n",
       "Df Model:                          20                                         \n",
@@ -672,6 +672,8 @@
    ],
    "source": [
     "import statsmodels.api as sm\n",
+    "from statsmodels.iolib.summary2 import summary_col\n",
+    "\n",
     "# Supprimer les lignes avec NaN ou Inf\n",
     "data_US_clean = data_US.dropna()\n",
     "data_US_clean=data_US_clean.apply(pd.to_numeric, errors='coerce')\n",
@@ -698,15 +700,139 @@
     "\n",
     "# Afficher le résumé de la régression\n",
     "print(model.summary())\n",
+    "\n",
+    "\n",
     "with open(\"regression_results.tex\", \"w\") as f:\n",
     "    f.write(model.summary().as_latex())\n",
+    "\n",
+    "    \n",
     "# Sauvegarder les résultats dans un fichier CSV\n",
-    "data_US_clean[['time', 'monetary_shocks']].to_csv('identified_monetary_shocks.csv', index=False)\n"
+    "data_US_clean[['time', 'monetary_shocks']].to_csv('identified_monetary_shocks.csv', index=False)\n",
+    "\n",
+    "# Exporter les résultats de la régression en latex\n",
+    "with open(\"regression_results_US.tex\", \"w\") as f:\n",
+    "    f.write(model.summary().as_latex())\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                            OLS Regression Results                            \n",
+      "==============================================================================\n",
+      "Dep. Variable:            Policy rate   R-squared:                       0.985\n",
+      "Model:                            OLS   Adj. R-squared:                  0.983\n",
+      "Method:                 Least Squares   F-statistic:                     480.0\n",
+      "Date:                Tue, 25 Mar 2025   Prob (F-statistic):           1.14e-74\n",
+      "Time:                        11:15:40   Log-Likelihood:                -2.1134\n",
+      "No. Observations:                 101   AIC:                             30.23\n",
+      "Df Residuals:                      88   BIC:                             64.22\n",
+      "Df Model:                          12                                         \n",
+      "Covariance Type:            nonrobust                                         \n",
+      "=========================================================================================\n",
+      "                            coef    std err          t      P>|t|      [0.025      0.975]\n",
+      "-----------------------------------------------------------------------------------------\n",
+      "const                     3.6169      7.541      0.480      0.633     -11.369      18.603\n",
+      "Policy rate_lag1          1.6183      0.075     21.627      0.000       1.470       1.767\n",
+      "Policy rate_lag2         -0.6891      0.074     -9.317      0.000      -0.836      -0.542\n",
+      "inflation                 0.0529      0.039      1.363      0.176      -0.024       0.130\n",
+      "inflation_lag1           -0.0315      0.061     -0.517      0.606      -0.153       0.090\n",
+      "inflation_lag2            0.0541      0.043      1.269      0.208      -0.031       0.139\n",
+      "GDPC1_log                 6.7889      2.538      2.675      0.009       1.746      11.832\n",
+      "GDPC1_lag1_log           -7.1034      3.007     -2.362      0.020     -13.080      -1.127\n",
+      "GDPC1_lag2_log           -0.0565      2.493     -0.023      0.982      -5.010       4.897\n",
+      "spread corporate         -0.3134      0.087     -3.613      0.001      -0.486      -0.141\n",
+      "spread corporate_lag1     0.4190      0.132      3.178      0.002       0.157       0.681\n",
+      "spread corporate_lag2    -0.1595      0.083     -1.932      0.057      -0.324       0.005\n",
+      "time_squared          -6.849e-07   3.16e-05     -0.022      0.983   -6.34e-05    6.21e-05\n",
+      "==============================================================================\n",
+      "Omnibus:                        3.195   Durbin-Watson:                   1.832\n",
+      "Prob(Omnibus):                  0.202   Jarque-Bera (JB):                3.110\n",
+      "Skew:                          -0.135   Prob(JB):                        0.211\n",
+      "Kurtosis:                       3.816   Cond. No.                     1.61e+06\n",
+      "==============================================================================\n",
+      "\n",
+      "Notes:\n",
+      "[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n",
+      "[2] The condition number is large, 1.61e+06. This might indicate that there are\n",
+      "strong multicollinearity or other numerical problems.\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Essai de modifications du nombre de lags et modification de la table latex pour obtenir les étoiles\n",
+    "\n",
+    "\n",
+    "import statsmodels.api as sm\n",
+    "from statsmodels.iolib.summary2 import summary_col\n",
+    "\n",
+    "# Supprimer les lignes avec NaN ou Inf\n",
+    "data_US_clean = data_US.dropna()\n",
+    "data_US_clean=data_US_clean.apply(pd.to_numeric, errors='coerce')\n",
+    "# Définition de Y (variable dépendante)\n",
+    "Y = data_US_clean['Policy rate']\n",
+    "\n",
+    "# Sélectionner toutes les colonnes sauf 'key_rate' et 'TIME_PERIOD'\n",
+    "X = data_US_clean[['Policy rate_lag1','Policy rate_lag2',\n",
+    "'inflation','inflation_lag1','inflation_lag2', \n",
+    "'GDPC1_log', 'GDPC1_lag1_log', 'GDPC1_lag2_log', \n",
+    "'spread corporate','spread corporate_lag1', 'spread corporate_lag2',\n",
+    "'time_squared']]\n",
+    "\n",
+    "\n",
+    "\n",
+    "# Ajouter une constante pour l'intercept dans la régression\n",
+    "X = sm.add_constant(X)\n",
+    "\n",
+    "# Régression\n",
+    "model = sm.OLS(Y, X).fit()\n",
+    "# Ajouter les étoiles de significativité\n",
+    "def significance_stars(p):\n",
+    "    if p < 0.01:\n",
+    "        return '***'\n",
+    "    elif p < 0.05:\n",
+    "        return '**'\n",
+    "    elif p < 0.10:\n",
+    "        return '*'\n",
+    "    else:\n",
+    "        return ''\n",
+    "\n",
+    "# Construire un DataFrame avec les résultats formatés\n",
+    "coef_table = pd.DataFrame({\n",
+    "    \"Coefficient\": model.params,\n",
+    "    \"Std. Error\": model.bse,\n",
+    "    \"t-Statistic\": model.tvalues,\n",
+    "    \"P-Value\": model.pvalues\n",
+    "})\n",
+    "\n",
+    "# Ajouter les étoiles aux coefficients\n",
+    "coef_table[\"Significance\"] = coef_table[\"P-Value\"].apply(significance_stars)\n",
+    "coef_table[\"Coefficient\"] = coef_table[\"Coefficient\"].round(4).astype(str) + coef_table[\"Significance\"]\n",
+    "\n",
+    "\n",
+    "# Afficher le résumé de la régression\n",
+    "print(model.summary())\n",
+    "\n",
+    "\n",
+    "# Sélectionner uniquement les colonnes pertinentes pour l'affichage\n",
+    "coef_table = coef_table[[\"Coefficient\", \"Std. Error\", \"t-Statistic\", \"P-Value\"]]\n",
+    "\n",
+    "# Exporter en LaTeX\n",
+    "latex_table = coef_table.to_latex(index=True, escape=False)\n",
+    "with open(\"regression_results_with_stars.tex\", \"w\") as f:\n",
+    "    f.write(latex_table)\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -746,7 +872,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
