Mise à jour du data base des working hours pour corriger les valeurs manquantes terminales

--- a/Visualisation.ipynb
+++ b/Visualisation.ipynb
@@ -64,10 +64,10 @@
    "outputs": [],
    "source": [
     "# Importation des données\n",
-    "df = pd.read_excel(\"Données_produites/base_de_données_v1.xlsx\")\n",
+    "#df = pd.read_excel(\"Données_produites/base_de_données_v1.xlsx\")\n",
     "\n",
     "#Pour voir les changements avec la suppression des données manquantes intermédiaires utiliser:\n",
-    "# df = pd.read_excel(\"base_de_données_v1.xlsx\")\n",
+    "df = pd.read_excel(\"base_de_données_v1.xlsx\")\n",
     "\n",
     "\n",
     "# Indexation\n",
@@ -162,6 +162,20 @@
     "'''\n",
     "percentage_missing\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Nous allons traiter les données manquantes par dataframe"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
