--- a/data.ipynb
+++ b/data.ipynb
@@ -579,7 +579,8 @@
     "df_final = df_concat[ordered_columns]\n",
     "\n",
     "# Exportation\n",
-    "df_final.to_excel('base_de_données_v1.xlsx', index=True, engine='openpyxl')"
+    "df_final.to_excel('base_de_données_v1.xlsx', index=True, engine='openpyxl')\n",
+    "df_final"
    ]
   }
  ],
