Tentative construction de corrélations (intra-pays) + interpolation ST_IR_Slovakia

--- a/Visualisation.ipynb
+++ b/Visualisation.ipynb
@@ -167,7 +167,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Nous allons traiter les données manquantes par dataframe"
+    "Correlations\n",
+    "Idée, nous allons étudier les correlations entre plusieurs variables de 4 pays (corrélations à l'intérieur du même pays)"
    ]
   },
   {
@@ -175,7 +176,37 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#Fonction qui construit un vecteur contenant le nom des variables\n",
+    "def variables_pays(pays):\n",
+    "    variable_pays=[f'CPI_{pays}',f'PIB_{pays}',f'LT_IR_{pays}',f'ST_IR_{pays}',f'WH_{pays}',f'P_Growth_{pays}']\n",
+    "    return(variable_pays)\n",
+    "\n",
+    "\n",
+    "France=variables_pays('France')\n",
+    "Germany=variables_pays('Germany')\n",
+    "Denmark=variables_pays('Denmark')\n",
+    "Romania=variables_pays('Romania')\n",
+    "\n",
+    "plt.figure(figsize=(20, 20))\n",
+    "\n",
+    "plt.subplot(2,2,1)\n",
+    "sns.heatmap(df[France].corr())\n",
+    "plt.title(\"Matrice de corrélation des variables de la France\")\n",
+    "\n",
+    "plt.subplot(2,2,2)\n",
+    "sns.heatmap(df[Germany].corr())\n",
+    "plt.title(\"Matrice de corrélation des variables de l'Allemagne\")\n",
+    "\n",
+    "plt.subplot(2,2,3)\n",
+    "sns.heatmap(df[Denmark].corr())\n",
+    "plt.title(\"Matrice de corrélation des variables du Danemark\")\n",
+    "\n",
+    "plt.subplot(2,2,4)\n",
+    "sns.heatmap(df[Romania].corr())\n",
+    "plt.title(\"Matrice de corrélation des variables de la Roumanie\")\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -302,6 +333,18 @@
     "plt.grid(True)\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
