--- a/data.ipynb
+++ b/data.ipynb
@@ -308,7 +308,8 @@
     "df_ST_IR = df_ST_IR.rename(columns={'ST_IR_Slovak_Republic': 'ST_IR_Slovakia'})\n",
     "\n",
     "#Nettoyage des données manquantes intermédiaires avec une interpolation\n",
-    "df_ST_IR['ST_IR_Hungary']=df_ST_IR['ST_IR_Hungary'].interpolate(method='linear')\n"
+    "df_ST_IR['ST_IR_Hungary']=df_ST_IR['ST_IR_Hungary'].interpolate(method='linear')\n",
+    "df_ST_IR['ST_IR_Slovakia']=df_ST_IR['ST_IR_Slovakia'].interpolate(method='linear')"
    ]
   },
   {
